# logs-tokenizer

./: .gitignore  Cargo.toml  Info.plist  LICENSE  README-smart-paste.md  README.md  build.rs  start-logs-tokenizer.bat  start-smart-paste.bat  test-csharp.ps1  test-macro.ps1  test-macro.txt  test_tokenizer.rs
.github/workflows/: ci.yml  release.yml
scripts/: build_macos.sh
src/: logs-tokenizer.ps1  main.rs  smart-paste-logs.ps1  start-logs-tokenizer.bat
src/core/: mod.rs  mod_tag_seq.rs
