[package]
name = "logstokenizer"
version = "1.0.1"
edition = "2021"
authors = ["Sergei Vaskov"]
description = "Intelligent log compression for clipboard"

[dependencies]
# Core dependencies
regex = "1.10"
once_cell = "1.19"

# Platform dependencies
arboard = "3.3"
global-hotkey = "0.5"
tray-icon = "0.13"
tao = "0.27"
dark-light = "1.0"
resvg = "0.38"
usvg = "0.38"
tiny-skia = "0.11"
winreg = "0.56.0"
image = "0.25.10"
tauri-winrt-notification = "0.7.2"
ico = "0.5.0"
log = "0.4.29"
simplelog = "0.12.2"
anyhow = "1.0.102"
tempfile = "3.27.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }

[build-dependencies]
winresource = "0.1.31"
